--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
   <title>Scott Moss</title>
 </head>
 <body>
   <h1>Home</h1>
+  <script type="text/javascript" src='lib/angular/angular.min.js'></script>
+  <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
+  <script type="text/javascript" src='js/app.js'></script>
+  <script type="text/javascript" src='js/controllers.js'></script>
+  <script type="text/javascript" src='js/services.js'></script>
 </body>
 </html>
