--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='MeApp'>
 <head>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
   <title>Scott Moss</title>
 </head>
 <body>
-  <h1>Home</h1>
+  <ng-view></ng-view>
   <script type="text/javascript" src='lib/angular/angular.min.js'></script>
   <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
   <script type="text/javascript" src='js/app.js'></script>
