--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Scott Moss</title>
 </head>
 <body>
+  <ul>
+    <li><a href="#/home">Home</a></li>
+    <li><a href="#/profile">Profile</a></li>
+  </ul>
   <ng-view></ng-view>
   <script type="text/javascript" src='lib/angular/angular.min.js'></script>
   <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
