--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <ul>
     <li><a href="#/home">Home</a></li>
-    <li><a href="#/profile">Profile</a></li>
+    <li><a href="#/projects">Projects</a></li>
   </ul>
   <ng-view></ng-view>
   <script type="text/javascript" src='lib/angular/angular.min.js'></script>
