--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html ng-app='MeApp'>
 <head>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Scott Moss</title>
 </head>
 <body>
-  <ul>
-    <li><a href="#/home">Home</a></li>
-    <li><a href="#/projects">Projects</a></li>
-  </ul>
   <ng-view></ng-view>
   <script type="text/javascript" src='lib/angular/angular.min.js'></script>
   <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
