--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html ng-app='MeApp'>
-<head>
-  <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Scott Moss</title>
-</head>
-<body>
-  <ng-view></ng-view>
-  <script type="text/javascript" src='lib/angular/angular.min.js'></script>
-  <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
-  <script type="text/javascript" src='js/app.js'></script>
-  <script type="text/javascript" src='js/controllers.js'></script>
-  <script type="text/javascript" src='js/services.js'></script>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/animation.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Scott Moss</title>
+  </head>
+  <body>
+    <ng-view></ng-view>
+    <script type="text/javascript" src='lib/angular/angular.min.js'></script>
+    <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
+    <script type="text/javascript" src='lib/angular-animate/angular-animate.min.js'></script>
+    <script type="text/javascript" src='js/app.js'></script>
+    <script type="text/javascript" src='js/controllers.js'></script>
+    <script type="text/javascript" src='js/services.js'></script>
+  </body>
 </html>
