--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Scott Moss</title>
   </head>
   <body>
-    <ng-view></ng-view>
+    <ui-view></ui-view>
     <script type="text/javascript" src='lib/angular/angular.min.js'></script>
-    <script type="text/javascript" src='lib/angular-route/angular-route.min.js'></script>
+    <script type="text/javascript" src='lib/angular-animate/angular-animate.js'></script>
+    <script type="text/javascript" src='lib/angular-ui-router/release/angular-ui-router.js'></script>
     <script type="text/javascript" src='js/app.js'></script>
     <script type="text/javascript" src='js/controllers.js'></script>
     <script type="text/javascript" src='js/services.js'></script>
