(fix) update styles

--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,8 @@
 <html ng-app='Home'>
   <head>
     <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/animation.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/animation.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <title>Scott Moss</title>
   </head>
   <body>
