(fix) fix live reload

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Scott Moss</title>
   </head>
   <body>
-    <ui-view></ui-view>
+    <div ui-view class="slide-down"></div ui-view>
 
     <!-- dependencies -->
     <script type="text/javascript" src='lib/angular/angular.js'></script>
