(feat) seperate lr and nodemon in gulp & concat scripts & add media queries for mobile version

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Scott Moss</title>
   </head>
   <body>
-    <div ui-view class="slide-down"></div ui-view>
+    <div ui-view class="slide-down"></div>
 
     <!-- dependencies -->
     <script type="text/javascript" src='lib/angular/angular.js'></script>
@@ -17,11 +17,6 @@
     <script type="text/javascript" src="lib/angular-socket-io/socket.js"></script>
 
     <!-- app -->
-    <script type="text/javascript" src='src/app/app.js'></script>
-    <script type="text/javascript" src='src/app/app.controller.js'></script>
-    <script type="text/javascript" src='src/cards/card.js'></script>
-    <script type="text/javascript" src='src/cards/card.controller.js'></script>
-    <script type="text/javascript" src='src/cards/card.directive.js'></script>
-    <script type="text/javascript" src='src/cards/card.service.js'></script>
+    <script type="text/javascript" src='main.js'></script>
   </body>
 </html>
