--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app='Home'>
   <head>
-    <media name='viewport' content='width=device-width' />
+    <meta name='viewport' content='width=device-width' />
     <link rel="stylesheet" type="text/css" href="lib/bootstrap-css-only/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/css/animation.css">
     <link rel="stylesheet" type="text/css" href="styles/css/style.css">
